--- a/html/productos.html
+++ b/html/productos.html
@@ -11,7 +11,7 @@
         <h1>Modern Protein</h1>
         <nav>
             <ul>
-                <li><a href="../inicio.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="productos.html">Productos</a></li>
                 <li><a href="acerca_de.html">Acerca de</a></li>
             </ul>
