--- a/html/acerca_de.html
+++ b/html/acerca_de.html
@@ -29,7 +29,7 @@
         <h2>Sobre Nosotros</h2>
     </div>
 
-    <section class="bodyUS"> 
+    <section class="bodyUs"> 
         <div class="contenedor">
             <div class="espacio-imagen">
               <img src="imagen1.jpg" alt="Imagen 1" class="imagen">
