--- a/html/acerca_de.html
+++ b/html/acerca_de.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Modern Protein</h1>
-        <nav>
+        <nav class="primary-nav">
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="productos.html">Productos</a></li>
