proyecto casi terminado

--- a/html/articulos/otros.html
+++ b/html/articulos/otros.html
@@ -93,7 +93,7 @@
                         </div>
                         <div class="product-meta">
                             
-                            <span class="price"><strong>18</strong>00€</span>
+                            <span class="price"><strong>9</strong>00€</span>
                             <span class="price-details">(1,50€/u)</span>
                             <p class="bought">50+ comprados el mes pasado</p>
                             <p>Entrega <strong>GRATIS en 48h</strong></p>
@@ -185,7 +185,7 @@
             <div class="product">
                 <img src="../../utils/Vitaminas.jpeg" alt="Proteínas">
                 <div class="product-details">
-                    <h4 class="product-title">MP Multivitamin capsules Plus / 1Kg </h4> 
+                    <h4 class="product-title">MP Multivitamin Capsules Plus / 1Kg </h4> 
                     <div class="product-info">
                         <div class="product-description">
                             <p>MP Multivitamin capsules Plus es una solución conveniente para tus necesidades diarias de vitaminas y minerales. Con una fórmula completa y equilibrada. </p>
@@ -224,7 +224,7 @@
             <div class="product">
                 <img src="../../utils/Vitaminas.jpeg" alt="Proteínas">
                 <div class="product-details">
-                    <h4 class="product-title">MP Multivitamin capsules Plus / 1Kg</h4> 
+                    <h4 class="product-title">MP Multivitamin Capsules Plus / 1Kg</h4> 
                     <div class="product-info">
                         <div class="product-description">
                             <p>MP Multivitamin capsules Plus es una solución conveniente para tus necesidades diarias de vitaminas y minerales. Con una fórmula completa y equilibrada. </p>
