--- a/html/articulos/proteina.html
+++ b/html/articulos/proteina.html
@@ -32,10 +32,10 @@
             <div class="product">
                 <img src="../../utils/proteina.png" alt="Proteínas">
                 <div class="product-details">
-                    <h4 class="product-title">MP Nutrition Whey Protein Premium 100% / 2Kg</h4>
+                    <h4 class="product-title">MP Nutrition Whey Protein Premium  / 2Kg</h4>
                     <div class="product-info">
                         <div class="product-description">
-                            <p>MP Nutrition Premium Whey Protein 100% es una proteína de suero de leche de alta calidad, ideal para el crecimiento muscular y la recuperación.</p>
+                            <p>MP Nutrition Premium Whey Protein  es una proteína de suero de leche de alta calidad, ideal para el crecimiento muscular y la recuperación.</p>
                             <div class="flavor-label">Fresa</div>
                             <!--Label rating estrellas-->
                             <div class="rating">
@@ -70,10 +70,10 @@
             <div class="product">
                 <img src="../../utils/proteina.png" alt="Proteínas">
                 <div class="product-details">
-                    <h4 class="product-title">MP Nutrition Whey Protein Premium 100% / 2Kg</h4>
+                    <h4 class="product-title">MP Nutrition Whey Protein Premium  / 2Kg</h4>
                     <div class="product-info">
                         <div class="product-description">
-                            <p>MP Nutrition Premium Whey Protein 100% es una proteína de suero de leche de alta calidad, ideal para el crecimiento muscular y la recuperación.</p>
+                            <p>MP Nutrition Premium Whey Protein  es una proteína de suero de leche de alta calidad, ideal para el crecimiento muscular y la recuperación.</p>
                             <div class="flavor-label">Coco</div>
                             <!--Label rating estrellas-->
                             <div class="rating">
@@ -108,10 +108,10 @@
             <div class="product">
                 <img src="../../utils/proteina.png" alt="Proteínas">
                 <div class="product-details">
-                    <h4 class="product-title">MP Nutrition Whey Protein Premium 100% / 2Kg</h4>
+                    <h4 class="product-title">MP Nutrition Whey Protein Premium  / 2Kg</h4>
                     <div class="product-info">
                         <div class="product-description">
-                            <p>MP Nutrition Premium Whey Protein 100% es una proteína de suero de leche de alta calidad, ideal para el crecimiento muscular y la recuperación.</p>
+                            <p>MP Nutrition Premium Whey Protein  es una proteína de suero de leche de alta calidad, ideal para el crecimiento muscular y la recuperación.</p>
                             <div class="flavor-label">Chocolate</div>
                             <!--Label rating estrellas-->
                             <div class="rating">
@@ -146,10 +146,10 @@
             <div class="product">
                 <img src="../../utils/proteina.png" alt="Proteínas">
                 <div class="product-details">
-                    <h4 class="product-title">MP Nutrition whey Protein Premium 100% / 2Kg</h4>
+                    <h4 class="product-title">MP Nutrition whey Protein Premium  / 2Kg</h4>
                     <div class="product-info">
                         <div class="product-description">
-                            <p>MP Nutrition Premium whey Protein 100% es una proteína de suero de leche de alta calidad, ideal para el crecimiento muscular y la recuperación.</p>
+                            <p>MP Nutrition Premium whey Protein  es una proteína de suero de leche de alta calidad, ideal para el crecimiento muscular y la recuperación.</p>
                             <div class="flavor-label">Vainilla</div>
                             <!--Label rating estrellas-->
                             <div class="rating">
@@ -184,10 +184,10 @@
             <div class="product">
                 <img src="../../utils/proteina.png" alt="Proteínas">
                 <div class="product-details">
-                    <h4 class="product-title">MP Nutrition whey Protein Premium 100% / 2Kg</h4>
+                    <h4 class="product-title">MP Nutrition whey Protein Premium  / 2Kg</h4>
                     <div class="product-info">
                         <div class="product-description">
-                            <p>MP Nutrition Premium whey Protein 100% es una proteína de suero de leche de alta calidad, ideal para el crecimiento muscular y la recuperación.</p>
+                            <p>MP Nutrition Premium whey Protein  es una proteína de suero de leche de alta calidad, ideal para el crecimiento muscular y la recuperación.</p>
                             <div class="flavor-label">Caramelo</div>
                             <!--Label rating estrellas-->
                             <div class="rating">
@@ -223,10 +223,10 @@
             <div class="product">
                 <img src="../../utils/proteina.png" alt="Proteínas">
                 <div class="product-details">
-                    <h4 class="product-title">MP Nutrition whey Protein Premium 100% / 2Kg</h4>
+                    <h4 class="product-title">MP Nutrition whey Protein Premium / 2Kg</h4>
                     <div class="product-info">
                         <div class="product-description">
-                            <p>MP Nutrition Premium whey Protein 100% es una proteína de suero de leche de alta calidad, ideal para el crecimiento muscular y la recuperación.</p>
+                            <p>MP Nutrition Premium whey Protein  es una proteína de suero de leche de alta calidad, ideal para el crecimiento muscular y la recuperación.</p>
                             <div class="flavor-label">Choco Blanco</div>
                             <!--Label rating estrellas-->
                             <div class="rating">
