--- a/html/productos.html
+++ b/html/productos.html
@@ -33,50 +33,43 @@
     <section class="products">
         <div class="product">
             <img src="../utils/proteina.png" alt="Proteina">
-            <h2>Proteina Whey</h2>
-            <p class="price">$19.99</p>
+            <h2>MP Nutrition Whey Protein Premium / 2Kg</h2>
+            <p class="price">20.80€</p>
             <a href="#" class="btn">Comprar</a>
         </div>
 
         <div class="product">
             <img src="../utils/Creatina.jpeg" alt="Creatina">
-            <h2>Creatina</h2>
-            <p class="price">$29.99</p>
+            <h2>MP Creatine Monohydrate Maximum Purity / 500g</h2>
+            <p class="price">15.30€</p>
             <a href="#" class="btn">Comprar</a>
         </div>
 
         <div class="product">
             <img src="../utils/Barrita.jpeg" alt="Barrita">
-            <h2>Barrita de Proteina</h2>
-            <p class="price">$19.99</p>
+            <h2>MP Dried fruit Bar / Pack de 6u</h2>
+            <p class="price">9.00€</p>
             <a href="#" class="btn">Comprar</a>
         </div>
 
         <div class="product">
             <img src="../utils/Barrita.jpeg" alt="Barrita">
-            <h2>Barrita de Avena</h2>
-            <p class="price">$19.99</p>
+            <h2>MP Dried fruit Bar / Pack de 12u</h2>
+            <p class="price">18.00€</p>
             <a href="#" class="btn">Comprar</a>
         </div>
 
         <div class="product">
             <img src="../utils/Vitaminas.jpeg" alt="Vitaminas">
-            <h2>Multivitamínico</h2>
-            <p class="price">$19.99</p>
+            <h2>MP Multivitamin Capsules Plus / 1Kg</h2>
+            <p class="price">12.10€</p>
             <a href="#" class="btn">Comprar</a>
         </div>
 
         <div class="product">
             <img src="../utils/Batido Bote.jpeg" alt="Batido">
-            <h2>Batido Proteico</h2>
-            <p class="price">$19.99</p>
-            <a href="#" class="btn">Comprar</a>
-        </div>
-
-        <div class="product">
-            <img src="../utils/proteina.png" alt="Proteina">
-            <h2>Proteina Iso</h2>
-            <p class="price">$19.99</p>
+            <h2>MP Prepared Milk Protein Shaker / 300ml</h2>
+            <p class="price">4.95€</p>
             <a href="#" class="btn">Comprar</a>
         </div>
 
