--- a/html/acerca_de.html
+++ b/html/acerca_de.html
@@ -12,7 +12,7 @@
         <nav class="primary-nav">
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="productos.html">Productos</a></li>
+                <li class="aProductos"><a href="productos.html">Productos</a></li>
                 <li><a href="acerca_de.html">Acerca de</a></li>
             </ul>
         </nav>
@@ -35,19 +35,19 @@
         <div class="contenedor">
             <!-- Aquí irá el contenido -->
             <div class="contenido">
-                <div class="fila">
+                <div class="fila filaPequeña">
                     <div class="info">
                         <h2>Sobre Nosotros</h2>
                         <p>Somos Modern Protein, tu destino confiable para suplementos deportivos de alta calidad. Nos esforzamos por ofrecerte productos efectivos respaldados por la ciencia y formulados con ingredientes naturales.
                             Nos proyectamos como líderes internacionales en la industria de suplementos deportivos, con la visión de establecer tiendas físicas para una experiencia más personalizada.
                         </p>
                     </div>
-                    <div class="foto">
+                    <div class="foto fotoPequeña">
                         <!-- Foto de la primera fila -->
                         <img src="../utils/foto1AD.jpeg" alt="Imagen 1" class="imagen">
                     </div>
                 </div>
-                <div class="fila">
+                <div class="fila fila2">
                     <div class="foto">
                         <!-- Foto de la segunda fila -->
                         <img class="imagen2" src="../utils/Lucia.jpeg" alt="Imagen 2" class="imagen">
