--- a/html/productos.html
+++ b/html/productos.html
@@ -12,7 +12,7 @@
         <nav class="primary-nav">
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="productos.html">Productos</a></li>
+                <li class="aProductos"><a href="productos.html">Productos</a></li>
                 <li><a href="acerca_de.html">Acerca de</a></li>
             </ul>
         </nav>
@@ -26,7 +26,7 @@
     </header>
 
     <div class="nuestrosProductos">
-        <h2>Nuestros Productos</h2>
+        <h2>Productos</h2>
     </div>
     
     <br>
