--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <header>
         <h1>Modern Protein</h1>
-        <nav>
+        <nav class="primary-nav">
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="html/productos.html">Productos</a></li>
+                <li><a href="#index">Inicio</a></li>
+                <li class="aProductos"><a href="html/productos.html">Productos</a></li>
                 <li><a href="html/acerca_de.html">Acerca de</a></li>
             </ul>
         </nav>
@@ -25,7 +25,7 @@
     <section>
         
         <div class="container">
-            <h2>Alcanza tus metas con nuestros suplementos</h2>
+            <h2>Alcanza tus metas con nosotros</h2>
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
               <!-- Indicators -->
               <ol class="carousel-indicators">
